# FR3_duo-Tirocinio

./: .$Franka_UML.drawio.bkp  .$Franka_UML.drawio.dtmp  .gitignore  Dockerfile  Franka_UML.drawio  LICENSE  README.md  docker-compose.yml  franka_entrypoint.sh
.devcontainer/: devcontainer.json
coppelia_scenes/: duo-fr3.ttt  duo-fr3_with_env.ttt  single-fr3.ttt  single-fr3_2.ttt
src/fr3_motion_control/: CMakeLists.txt  package.xml
src/fr3_motion_control/launch/: fr3_motion_control.launch.py  move_fr3.launch.py
src/fr3_motion_control/src/: dual_hand_changing_motion.cpp  move_fr3_node.cpp  start_pose_motion.cpp
src/fr3_mtc/: CMakeLists.txt  package.xml
src/fr3_mtc/include/fr3_mtc/: mtc_task_node.hpp
src/fr3_mtc/src/: mtc_task_node.cpp
src/franka_ros2/: franka.repos
src/franka_ros2/franka_bringup/config/: franka.config.yaml
src/franka_ros2/franka_bringup/launch/: moveit_duo.launch.py
src/franka_ros2/franka_fr3_moveit_config/: CMakeLists.txt
src/franka_ros2/franka_fr3_moveit_config/config/: fr3_controllers.yaml  fr3_duo_controllers.yaml  fr3_duo_ros_controllers.yaml  fr3_ros_controllers.yaml  kinematics_duo.yaml  ompl_planning_duo.yaml
src/franka_ros2/franka_fr3_moveit_config/launch/: moveit.launch.py  moveit_duo.launch.py
src/franka_ros2/franka_fr3_moveit_config/rviz/: franka.rviz  franka_duo.rviz
src/franka_ros2/franka_gripper/: CMakeLists.txt
src/franka_ros2/franka_gripper/config/: franka_duo_gripper_node.yaml
src/franka_ros2/franka_gripper/include/franka_gripper/: IGripper.hpp  gripper_action_server.hpp  gripper_action_server_sim.hpp  hardware_gripper.hpp  simulated_gripper.hpp
src/franka_ros2/franka_gripper/launch/: gripper.launch.py  gripper_duo.launch.py
src/franka_ros2/franka_gripper/src/: gripper_action_server.cpp  gripper_action_server_sim.cpp  hardware_gripper.cpp  simulated_gripper.cpp
src/franka_ros2/franka_ros2/: package.xml
src/single_arm/: CMakeLists.txt  package.xml  single_arm.xml
src/single_arm/include/single_arm/: gripper_action_server_sim.hpp  gripper_bridge.hpp  gripper_bridge_controller.hpp
src/single_arm/src/: gripper_action_server_sim.cpp  gripper_bridge.cpp  gripper_bridge_controller.cpp  mimic_node.cpp
src/single_arm_bridge/: CMakeLists.txt  package.xml
src/single_arm_bridge/src/: add_collision_object.cpp  gripper_controller.cpp  mimic_node.cpp  sim_gripper_action_server.cpp
src/task_constructor/: CMakeLists.txt  package.xml
src/task_constructor/include/task_constructor/: mtc_node.hpp  object_spawner.hpp
src/task_constructor/launch/: benchmark_mtc.py  fr3_mtc.launch.py  mtc.launch.py
src/task_constructor/src/: mtc_node.cpp  object_spawner.cpp
